--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@wdio/cucumber-framework": "^8.39.0",
     "@wdio/local-runner": "^8.39.1",
     "@wdio/spec-reporter": "^8.39.0",
+    "safaridriver": "^0.1.2",
+    "ts-node": "^10.9.2",
     "wdio-wait-for": "^3.0.11"
   },
   "scripts": {
@@ -18,7 +20,9 @@
   "dependencies": {
     "@cucumber/cucumber": "^10.8.0",
     "@cucumber/gherkin": "^28.0.0",
-    "@cucumber/messages": "^25.0.1"
+    "@cucumber/messages": "^25.0.1",
+    "chromedriver": "^127.0.1",
+    "geckodriver": "^4.4.2"
   },
   "resolutions": {
     "@cucumber/cucumber": "^10.8.0",
