--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.2",
     "@babel/register": "^7.24.6",
+    "@wdio/allure-reporter": "^8.39.0",
     "@wdio/cli": "^8.39.1",
     "@wdio/cucumber-framework": "^8.39.0",
     "@wdio/local-runner": "^8.39.1",
@@ -21,6 +22,7 @@
     "@cucumber/cucumber": "^10.8.0",
     "@cucumber/gherkin": "^28.0.0",
     "@cucumber/messages": "^25.0.1",
+    "allure-commandline": "^2.30.0",
     "chromedriver": "^127.0.1",
     "geckodriver": "^4.4.2"
   },
